--- a/src/BookInfoRetrievalService/Dockerfile
+++ b/src/BookInfoRetrievalService/Dockerfile
@@ -1,12 +1,11 @@
 FROM python:3.10.0-alpine
 
-RUN mkdir /app
-
 WORKDIR /app
 
 ADD ./BookInfoRetrievalService.py /app
 ADD ./requirements.txt /app
 
+RUN python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 EXPOSE 5000
