--- a/src/BookInfoRetrievalService/Dockerfile
+++ b/src/BookInfoRetrievalService/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.10.0-alpine
 
 WORKDIR /app
 
-ADD ./BookInfoRetrievalService.py /app
-ADD ./requirements.txt /app
+ADD src/BookInfoRetrievalService/ /app
 
 RUN python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
