--- a/src/BookManagerService/Dockerfile
+++ b/src/BookManagerService/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.10.0-alpine
 
 WORKDIR /app
 
-ADD ./BookManagerService.py /app
-ADD ./requirements.txt /app
+ADD src/BookManagerService/ /app
 
 RUN python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
