--- a/src/LoginRegisterService/requirements.txt
+++ b/src/LoginRegisterService/requirements.txt
@@ -1,3 +1,7 @@
 flask==3.0.0
 flask-consulate==0.2.0
-SQLAlchemy==2.0.23
+psycopg2-binary==2.9.9
+bcrypt==4.1.2
+flask-smorest==0.42.3
+marshmallow==3.20.2 
+bcrypt==4.1.2
