--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "svelte": "^4.2.8",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "@sveltestrap/sveltestrap": "^6.2.2",
+    "svelte-spa-router": "^4.0.1"
   }
 }
