--- a/k8s/login-register-deployment.yaml
+++ b/k8s/login-register-deployment.yaml
@@ -16,8 +16,20 @@ spec:
         - image: asusnik12354/login-register-service:master
           name: login-register 
           ports:
-            - containerPort: 5000
+            - containerPort: 5002
               name: server
+          livenessProbe:
+            httpGet:
+              path: /health/ready
+              port: 5002
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 5002
+            initialDelaySeconds: 3
+            periodSeconds: 3
 
 ---
 apiVersion: v1
@@ -27,7 +39,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 5000
+    - port: 5002
       protocol: TCP
       targetPort: server
   selector:
