--- a/src/BookManagerService/requirements.txt
+++ b/src/BookManagerService/requirements.txt
@@ -5,3 +5,6 @@ flask-cors==4.0.0
 flask-smorest==0.42.3
 marshmallow==3.20.2 
 python-etcd==0.4.5 
+flask==3.0.0
+python-dotenv==1.0.0
+pyaml==23.12.0
