--- a/src/LoginRegisterService/requirements.txt
+++ b/src/LoginRegisterService/requirements.txt
@@ -6,4 +6,5 @@ flask-smorest==0.42.3
 marshmallow==3.20.2 
 flask-cors==4.0.0
 python-etcd==0.4.5 
-ddtrace==2.4.0
+python-dotenv==1.0.0
+pyaml==23.12.0
