Add ability to disable database for testing liveness check

--- a/k8s/book-manager-deployment.yaml
+++ b/k8s/book-manager-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - image: asusnik12354/book-manager-service:master
+          imagePullPolicy: Always
           name: book-info-retrieval 
           ports:
             - containerPort: 5001
