--- a/k8s/book-info-deployment.yaml
+++ b/k8s/book-info-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - image: asusnik12354/book-info-retrieval-service:master
+          imagePullPolicy: Always
           name: book-info-retrieval 
           ports:
             - containerPort: 5000
