--- a/k8s/openapi-deployment.yaml
+++ b/k8s/openapi-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - image: asusnik12354/openapi:master
+          imagePullPolicy: Always
           name: openapi
           ports:
             - containerPort: 5003
