--- a/src/BookInfoRetrievalService/requirements.txt
+++ b/src/BookInfoRetrievalService/requirements.txt
@@ -1,4 +1,11 @@
 flask==3.0.0
-flask-consulate==0.2.0
-SQLAlchemy==2.0.23
+psycopg2-binary==2.9.9
+bcrypt==4.1.2
+flask-cors==4.0.0
+flask-smorest==0.42.3
+marshmallow==3.20.2 
+python-etcd==0.4.5 
+flask==3.0.0
 python-dotenv==1.0.0
+pyaml==23.12.0
+requests==2.31.0
